# streamlit-on-googlecloud

./: .gitlab-ci.yml  Dockerfile  README.md  cloudbuild.yaml  config.py  firebase.py  home.py  pyproject.toml  test.sh
.github/workflows/: release.yaml
pages/: bq.py
